# pyPRegX

./: LICENSE  README.md  pyproject.toml
pypregx/: body_regex.py  head_regex.py  links_regex.py  pregx.py  text_regex.py  title_regex.py
